--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/workshop_monngo
+
+# actuator
+management.endpoint.health.show-details=always
+#indica que health deve mostrar detalhes sempre
+
+management.endpoints.web.exposure.include=*
+#alem do health e do info ele sempre vai export todos endpoints disponiveis
+
+logging.file.name=appfile.log
+
+
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+# puxa informacoes do projeto do pom.xml
+
+spring.boot.admin.client.url=http://localhost:8081
+# configurando o Spring Boot Admin Server
